Add update time

--- a/fish.html
+++ b/fish.html
@@ -34,7 +34,7 @@
     <header>
         <h1>Fishing Tool for AC:NH (<a href="bugs.html">Bugs</a>)</h1>
         <p>Select the fish you've already caught and click "Get Needed Fish!"</p>
-        <p>The current month is <span id="month">...</span>.</p>
+        <p>The current month is <span id="month">...</span>. <em>Last updated February 2021.</em></p>
     </header>
 
     <section id="fish">
