--- a/index.html
+++ b/index.html
@@ -1,18 +1,76 @@
 <!DOCTYPE html>
-<html>
-	<head>
-        <meta charset="UTF-8">
-        <title>ACNH Critters Tools</title>
-        <link rel="stylesheet" href="css/fish.css">
-        <link rel="icon" type="image/png" href="img/NH-Icon-bitterling.png">
-        <meta name="ROBOTS" content="INDEX,FOLLOW">
-        <meta name="description" content="Use this tool to help track which fish and bugs are available on your island!">
-        <meta name="keywords" content="animal, crossing, acnh, bugs, fish, fishing, guide, tool">
-		<script>
-			window.location.replace("fish.html");
-		</script>
-	</head>
-	<body>
-		<p>Redirecting...</p>
-	</body>
+<html lang="en">
+
+<head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163135335-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-163135335-1');
+    </script>
+
+    <meta charset="UTF-8">
+    <title>ACNH Fishing Tool</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/critters.css">
+    <link rel="icon" type="image/png" href="acnh-img/NH-Icon-bitterling.png">
+    <meta name="ROBOTS" content="INDEX,FOLLOW">
+    <meta name="description" content="Use this tool to help track which fish and bugs are available on your island!">
+    <meta name="keywords" content="animal, crossing, acnh, bugs, fish, fishing, guide, tool">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+</head>
+
+<body onload="">
+    <nav>
+        <p><a href="http://www.sessu.net">sessu.net</a>
+            > Animal Crossing Fishing Tool</p>
+    </nav>
+
+    <header class="container">
+        <h1>Critter Guide for AC:NH</h1>
+        <p>Select the critters you've already caught and click "Get Needed!"</p>
+        <p>The current month is <span id="month">...</span>. <em>Last updated February 2021.</em></p>
+
+
+        <h2>Choose Critter Type</h2>
+        <div id="buttons" class="row">
+            <div class="col btn btn-primary" onclick="fishMode()">Fish</div>
+            <div class="col btn btn-success" onclick="bugMode()">Bugs</div>
+            <div class="col btn btn-info" onclick="deepMode()">Deep-Sea Creatures</div>
+        </div>
+    </header>
+
+
+    <section id="selection-area" class="container-fluid">
+        <table id="fishTable" hidden="true"><!-- data --></table>
+        <table id="bugTable" hidden="true"><!-- data --></table>
+        <table id="deepTable" hidden="true"><!-- data --></table>
+    </section>
+
+    <section id="output-area" class="container">
+        <button id="getFish" onclick="clickBox();">Get Needed</button>
+        <!-- <button id="clearFish" onclick="">Clear Saved Fish</button> -->
+        <button type="button" class="collapsible" id="clearFish">Show/Hide Additional Options</button>
+
+        <div class="content">
+            <h2>Choose Active Month</h2>
+            <div id="monthMenu" role="menu" class="row">
+                <!-- months go here -->
+            </div>
+        </div>
+
+        <table id="outputTable">
+            <!-- data -->
+        </table>
+    </section>
+    <script type="text/javascript" src="critters.js"></script>
+</body>
+
 </html>
