Small changes to head

--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
     </script>
 
     <meta charset="UTF-8">
-    <title>ACNH Fishing Tool</title>
+    <title>ACNH Critters Guide</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/critters.css">
     <link rel="icon" type="image/png" href="acnh-img/NH-Icon-bitterling.png">
     <meta name="ROBOTS" content="INDEX,FOLLOW">
-    <meta name="description" content="Use this tool to help track which fish and bugs are available on your island!">
+    <meta name="description" content="Use this tool to help track which critters are available on your island!">
     <meta name="keywords" content="animal, crossing, acnh, bugs, fish, fishing, guide, tool">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 
-<body onload="">
+<body>
     <nav>
         <p><a href="http://www.sessu.net">sessu.net</a>
             > Animal Crossing Fishing Tool</p>
