Small header/footer updates

--- a/index.html
+++ b/index.html
@@ -28,16 +28,14 @@
 </head>
 
 <body>
-    <nav>
-        <p><a href="http://www.sessu.net">sessu.net</a>
-            > Animal Crossing Fishing Tool</p>
+    <nav class="container">
+        <p><a href="http://www.sessu.net">sessu.net</a> > Animal Crossing Critters Guide</p>
     </nav>
 
     <header class="container">
-        <h1>Critter Guide for AC:NH</h1>
+        <h1>Critters Guide for AC:NH</h1>
         <p>Select the critters you've already caught and click "Get Needed!"</p>
-        <p>The current month is <span id="month">...</span>. <em>Last updated February 2021.</em></p>
-
+        <p>The current month is <span id="month">...</span>. 
 
         <h2>Choose Critter Type</h2>
         <div id="buttons" class="row">
@@ -70,6 +68,10 @@
             <!-- data -->
         </table>
     </section>
+
+    <footer class="container">
+        <p>Last updated February 2021. See <a href="https://github.com/sessu/acnh-critters">my GitHub</a> page for more information.</p>
+    </footer>
     <script type="text/javascript" src="critters.js"></script>
 </body>
 
