--- a/index.html
+++ b/index.html
@@ -2,19 +2,6 @@
 <html lang="en">
 
 <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163135335-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-
-        gtag('config', 'UA-163135335-1');
-    </script>
-
     <meta charset="UTF-8">
     <title>ACNH Critters Guide</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -24,7 +11,6 @@
     <meta name="description" content="Use this tool to help track which critters are available on your island!">
     <meta name="keywords" content="animal, crossing, acnh, bugs, fish, fishing, guide, tool">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
 </head>
 
 <body>
@@ -35,10 +21,10 @@
     <header class="container">
         <h1>Critters Guide for AC:NH</h1>
         <p>Select the critters you've already caught and click "Get Needed!"</p>
-        <p>The current month is <span id="month">...</span>. 
+        <p>The current month is <span id="month">...</span>. Currently searching in <span id="hemisphere">northern</span> hemisphere. 
 
         <h2>Choose Critter Type</h2>
-        <div id="buttons" class="row">
+        <div id="typeSelect" class="row">
             <div class="col btn btn-primary" onclick="fishMode()">Fish</div>
             <div class="col btn btn-success" onclick="bugMode()">Bugs</div>
             <div class="col btn btn-info" onclick="deepMode()">Deep-Sea Creatures</div>
@@ -54,13 +40,17 @@
 
     <section id="output-area" class="container">
         <button id="getFish" onclick="clickBox();">Get Needed</button>
-        <!-- <button id="clearFish" onclick="">Clear Saved Fish</button> -->
-        <button type="button" class="collapsible" id="clearFish">Show/Hide Additional Options</button>
+        <button id="options" type="button" class="collapsible" >Show/Hide Additional Options</button>
 
         <div class="content">
             <h2>Choose Active Month</h2>
             <div id="monthMenu" role="menu" class="row">
                 <!-- months go here -->
+            </div>
+            <h2>Choose Hemisphere</h2>
+            <div id="hemisphereMenu" role="menu" class="row">
+                <div id="north" class="col btn btn-secondary" onclick="setHemisphere('north')">Northern Hemisphere</div>
+                <div id="south" class="col btn btn-secondary" onclick="setHemisphere('south')">Southern Hemisphere</div>
             </div>
         </div>
 
@@ -72,6 +62,7 @@
     <footer class="container">
         <p>Last updated February 2021. See <a href="https://github.com/sessu/acnh-critters">my GitHub</a> page for more information.</p>
     </footer>
+    <script type="text/javascript" src="critter-lists.js"></script>
     <script type="text/javascript" src="critters.js"></script>
 </body>
 
