Add 'show all available' button, optimization for 'hours' columns, set default display to bugs (match ingame)

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
     </section>
 
     <section id="output-area" class="container">
-        <button id="getFish" onclick="clickBox();">Get Needed</button>
+        <button id="getNeeded" onclick="clickBox();">Get Needed</button>
+        <button id="getAll" onclick="getAll();">Get All Available</button>
         <button id="options" type="button" class="collapsible" >Show/Hide Additional Options</button>
 
         <div class="content">
